# business-research-agent

./: .env.example  .gitignore  Business_Research_Agent_TRD.md  docker-compose.yml
apps/frontend-ui/: next.config.ts  package-lock.json  package.json
apps/frontend-ui/app/: globals.css  layout.tsx  page.tsx
apps/orchestrator-api/: .env.example  Dockerfile  langgraph.json  main.py  pyproject.toml  run_graph.py  run_single_agent.py  test_keys.py  test_rag_insert.py  test_rag_query.py  test_schemas.py
apps/orchestrator-api/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
apps/orchestrator-api/src/: database.py  llm_utils.py  main.py  mcp_clients.py
apps/orchestrator-api/src/context/: knowledge.py  workspace.py
apps/orchestrator-api/src/graph/: frameworks.py  graph_builder.py  state.py
apps/orchestrator-api/src/graph/nodes/: collection_agents.py  collection_supervisor.py  collection_utils.py  financial_agent.py  macro_agent.py  scoping.py  trends_agent.py
apps/orchestrator-api/src/graph/nodes/analysis/: analysis_supervisor.py  frameworks.py  qualitative_agent.py  quantitative_agent.py
apps/orchestrator-api/src/graph/nodes/collection/: collection_supervisor.py  collection_utils.py  financial_agent.py  macro_agent.py  trends_agent.py
apps/orchestrator-api/src/graph/tools/: analytics_tools.py  collection_tools.py  common_tools.py  financial_tools.py  macro_tools.py  qualitative_tools.py  trends_tools.py
infrastructure/: Dockerfile
infrastructure/init-scripts/: 01-init.sql
init-scripts/: 01-init.sql
(+12 files in other folders)
